Manual verification and refactoring the renko flow (#55)
* Refactored Renko Data Computer and related classes

* Refactored Renko Data API and related classes